GNOME Bugzilla – Bug 687472
video-blend: fix memory leak
Last modified: 2012-11-02 19:48:01 UTC
There is a memory leak if the g_return_if_fail check fails
Created attachment 227919 [details] [review] proposed fix
(I'm committing this despite my comments re. g_return_*() on the other bug because this patch doesn't add extra checks and is nicer from a code style point of view too IMHO).
commit 2d8edb1e865e1f2ab117fba6c1e5d9a09c810618 Author: Miguel Angel Cabrera Moya <madmac2501@gmail.com> Date: Fri Nov 2 20:09:21 2012 +0100 video-blend: fix memory leak when called with invalid parameters https://bugzilla.gnome.org/show_bug.cgi?id=687472