video-blend: fix memory leak when called with invalid parameters

https://bugzilla.gnome.org/show_bug.cgi?id=687472